cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_474.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ssltest_old.c:2847: error: DEAD_STORE
  The value written to &ok (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ssltest_old.c:2847:5: Write of unused value
2845.   static int app_verify_callback(X509_STORE_CTX *ctx, void *arg)
2846.   {
2847.       int ok = 1;
            ^
2848.       struct app_verify_arg *cb_arg = arg;
2849.   
